# audit-ai-backend

./: .env.example  .gitignore  Dockerfile  README.md  collector.py  docker-compose.yml  evaluation.py  evaluation_ragas.py  fetch_real_data.py  ingestion.py  list_model.py  llm_engine.py  main.py  nist_audit_final_report.csv  pyproject.toml  rag_engine.py  rag_results.json  ragas_eval.py  render.yaml  requirements.txt  test.csv
evals/: collector.py  evaluator.py  ragas_eval.py  ragas_report.md  test.csv
scripts/: collector.py
src/audit_ai/: config.py  engine.py  ingestion.py  main.py
src/audit_ai/api/: main.py
src/audit_ai/core/: __init__.py  rag_engine.py
