[project]
name = "audit-ai-backend"
version = "0.1.0"
description = "Agentic RAG for NIST Compliance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "langchain-google-genai",
    "langchain-qdrant",
    "langgraph",
    "qdrant-client",
    "pypdf",
    "langchain-text-splitters",
    "pandas",
    "datasets>=4.5.0",
    "ragas>=0.4.3",
    "google-generativeai>=0.8.6",
    "jsonref>=1.1.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_ai"]
